@@ -57,7 +57,6 @@ function cms_config_load($loadLocal = true, $upgrade = false)
 	$config['url_rewriting'] = 'none';
 	//$config["assume_mod_rewrite"] = false; //Not being used in core
 	//$config['internal_pretty_urls'] = false; //Not being used in core
-	$config['use_hierarchy'] = true; //Now true by default
 	$config["auto_alias_content"] = true;
 	$config["image_manipulation_prog"] = "GD";
 	$config["image_transform_lib_path"] = "/usr/bin/ImageMagick/";
@@ -291,7 +290,6 @@ if(isset(\$_SERVER['HTTPS']) && \$_SERVER['HTTPS']=='on')
 
 #If you're using the internal pretty url mechanism or mod_rewrite, would you like to
 #show urls in their hierarchy?  (ex. http://www.mysite.com/parent/parent/childpage)
-\$config['use_hierarchy'] = ${$config['use_hierarchy']?'true':'false'};
 
 #If using none of the above options, what should we be using for the query string
 #variable?  (ex. http://www.mysite.com/index.php?page=somecontent)
